--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -83,6 +83,16 @@ for (i in 1:100) {
 
 ```
 
+```{r}
+
+sorted_brownlow <- sort(brownlow)
+
+plot(sorted_brownlow, type = "l", xlab = "Index", ylab = "Value",
+
+     main = "Line Plot of Brownlow Numerical Vector")
+
+
+```
 
 
 
