--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -103,6 +103,37 @@ The average earnig will be 279 and 95 percent confidence interval is 2 standard 
 # What are the fair odds? Use manipulation of odds in the function to tune Brownlows earnings to zero. 
 
 
+
+```{r}
+
+b_low <- array(100)
+
+for (i in 1:100) {
+
+  b_low[i] <- BrLw(odds=4.39)
+
+}
+
+
+```
+
+
+```{r}
+
+sorted_b_low <- sort(b_low)
+
+plot(sorted_b_low, type = "l", xlab = "Index", ylab = "Value",
+
+     main = "Line Plot of b_low Numerical Vector")
+
+```
+
+```{r}
+favstats(sorted_b_low)
+```
+
+
+
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
 
